--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,11 +1,8 @@
-<h4>All Posts:</h4>
-{{!-- Cards for posts --}}
+<h1>Homepage Wired!</h1>
+
 {{#each posts as |post|}}
 <div class="post-card card" data-post="{{id}}">
     <h1>Blog Title: {{title}} --- Post id: {{id}}</h1>
     <p>Content: {{content}}    Date created: {{created}}</p>
 </div>
 {{/each}}
-<script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.min.js" integrity="sha384-VHvPCCyXqtD5DqJeNxl2dtTyhF78xXNXdkwX1CZeRusQfRKp+tA7hAShOK/B/fQ2" crossorigin="anonymous"></script>
-<script src="/js/post.js"></script>
