--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -16,9 +16,10 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
-                <a class="nav-link active" aria-current="page" href="#">Homepage</a>
-                <a class="nav-link" href="#">Dashboard</a>
-                <a class="nav-link" href="#">Login</a>
+                <a class="nav-link active" aria-current="/home" href="#"><Button>Homepage</Button></a>
+                <a class="nav-link" href="/api/dashboar"><Button>Dashboard</Button></a>
+                <a class="nav-link" href="/api/user/login"><Button>Login</Button></a>
+                <a class="nav-link" href="/api/user/logout"><Button>Logout</Button></a>
             </div>
             </div>
         </div>
@@ -29,6 +30,9 @@
             {{{body}}}
             
         </div>
+        
     </main>
+</html>
+
 </body>
 </html>
