--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -5,6 +5,7 @@
     <br />
     <button class="btn btn-dark login-button">Login</button>
     <br />
-    <button class="btn btn-dark"><a href="/api/user/register">Not yet registered? Click here</a></button>
+    <button class="btn btn-dark"><a href="/api/user/register">Not yet registered as a user? Click here</a></button>
   </form>
 </div>
+<script src="/js/login.js"></script>
