--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -32,7 +32,8 @@
         </div>
         
     </main>
-</html>
 
+<script src="/js/script.js"></script>
+    <script src="/js/logout.js"></script>
 </body>
 </html>
