--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -8,22 +8,23 @@
     <title>Tech Blog</title>
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="#">Tech Blog</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-            <div class="navbar-nav">
-                <a class="nav-link active" aria-current="/home" href="#"><Button>Homepage</Button></a>
-                <a class="nav-link" href="/api/dashboar"><Button>Dashboard</Button></a>
-                <a class="nav-link" href="/api/user/login"><Button>Login</Button></a>
-                <a class="nav-link" href="/api/user/logout"><Button>Logout</Button></a>
-            </div>
-            </div>
-        </div>
-    </nav>
+    <header class="d-flex justify-content-between">
+        <h1>Tech Blog</h1>
+        <ul class="nav">
+  <li class="nav-item">
+    <a class="nav-link active" aria-current="page" href="/home"><button class="btn btn-dark">Home</button></a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link" href="/api/dashboard"><button class="btn btn-dark">Dashboard</button></a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link" href="/api/user/login"><button class="btn btn-dark">Login</button></a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link" href="/api/user/logout"><Button class="btn btn-dark" id="logout-button">Logout</Button></a>
+  </li>
+</ul>
+    </header>
     <main>
         <div class="container mt-3">
             
