--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,8 +1,8 @@
-<h1>Homepage Wired!</h1>
-
-{{#each posts as |post|}}
-<div class="post-card card" data-post="{{id}}">
-    <h1>Blog Title: {{title}} --- Post id: {{id}}</h1>
-    <p>Content: {{content}}    Date created: {{created}}</p>
-</div>
-{{/each}}
+<div class="home-main">
+  {{#each posts as |post|}}
+    <div class="post-card card" data-post="{{id}}">
+      <h2 id="post-title" data-post="{{id}}">{{title}}</h2>
+      <p data-post="{{id}}">Date created: {{created}}</p>
+    </div>
+  {{/each}}
+</div>}
