--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,3 +1,14 @@
+:root {
+  --blue: #3f88c5;
+  --dark-blue: #032b43;
+  --green: #136f63;
+  --space: #2b2d42;
+  --light-space: #8d99ae;
+  --lightest: #edf2f4;
+}
+* {
+  color: var(--blue);
+}
 body {
     min-height: 100%;
     background-color: var(--space);
