--- a/views/addComment.handlebars
+++ b/views/addComment.handlebars
@@ -6,7 +6,7 @@
     <input type="text" class="form-control" id="comment-title-input">
   </div>
   <div class="form-group">
-    <label for="comment-content">Comment Content:</label>
+    <label for="comment-content">Comment:</label>
     <textarea class="form-control" id="comment-content-input" rows="3"></textarea>
   </div>
   <button class="btn btn-dark" type="submit">Add Comment</button>
