--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,11 +1,11 @@
 <div class="user-form-card">
   <form class="user-form" action="">
-    <h4>Username:</h4><input type="text" />
-    <h4>Password:</h4><input type="text" />
+    <h4>Username:</h4><input id="username-login" type="text" />
+    <h4>Password:</h4><input id="password-login" type="password" />
     <br />
     <button class="btn btn-dark login-button">Login</button>
     <br />
-    <button class="btn btn-dark"><a href="/api/user/register">Not yet registered as a user? Click here</a></button>
+    <button class="btn btn-dark"><a href="/api/user/register">Not yet registered? Click here</a></button>
   </form>
 </div>
 <script src="/js/login.js"></script>
