fixes for web server

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -12,7 +12,7 @@
         <h1>Tech Blog</h1>
         <ul class="nav">
   <li class="nav-item">
-    <a class="nav-link active" aria-current="page" href="/home"><button class="btn btn-dark">Home</button></a>
+    <a class="nav-link active" aria-current="page" href="/"><button class="btn btn-dark">Home</button></a>
   </li>
   <li class="nav-item">
     <a class="nav-link" href="/api/dashboard"><button class="btn btn-dark">Dashboard</button></a>
