--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -8,33 +8,37 @@
     <title>Tech Blog</title>
 </head>
 <body>
-    <header class="d-flex justify-content-between">
-        <h1>Tech Blog</h1>
-        <ul class="nav">
-  <li class="nav-item">
-    <a class="nav-link active" aria-current="page" href="/"><button class="btn btn-dark">Home</button></a>
-  </li>
-  <li class="nav-item">
-    <a class="nav-link" href="/api/dashboard"><button class="btn btn-dark">Dashboard</button></a>
-  </li>
-  <li class="nav-item">
-    <a class="nav-link" href="/api/user/login"><button class="btn btn-dark">Login</button></a>
-  </li>
-  <li class="nav-item">
-    <a class="nav-link" href="/api/user/logout"><Button class="btn btn-dark" id="logout-button">Logout</Button></a>
-  </li>
-</ul>
-    </header>
+
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="#">Tech Blog</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+             <div class="navbar-nav">
+                <a class="nav-link active" aria-current="page" href="/">Homepage</a>
+                {{#if logged_in}}
+                <a class="nav-link" href="/api/dashboard/{{user_id}}">Dashboard</a>
+                <a class="nav-link" href="/api/user/logout">Logout</a>
+                {{/if}}
+                {{#unless logged_in}}
+                <a class="nav-link" href="/api/user/login">Dashboard</a>
+                <a class="nav-link" href="/api/user/login">Login</a>
+                {{/unless}}
+             </div>
+            </div>
+        </div>
+    </nav>
+
     <main>
         <div class="container mt-3">
-            
             {{{body}}}
             
         </div>
-        
     </main>
-
-<script src="/js/script.js"></script>
-    <script src="/js/logout.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.min.js" integrity="sha384-VHvPCCyXqtD5DqJeNxl2dtTyhF78xXNXdkwX1CZeRusQfRKp+tA7hAShOK/B/fQ2" crossorigin="anonymous"></script>
 </body>
 </html>
