--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -1,9 +1,52 @@
-<div class="dashboard-main">
-  {{#each posts as |post|}}
-    <div class="post-card card" data-post="{{id}}">
-      <h2 id="post-title" data-post="{{id}}">{{title}}</h2>
-      <p data-post="{{id}}">Date created: {{created}}</p>
+<h3>Dashboard</h3>
+<button id="modalBtn" type="button" class="btn btn-success add-post" data-toggle="modal" data-target="#myModal">
+  ✚ Add Post
+</button>
+<hr>
+<div class="modal fade" id="myModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="modal-title">Add a post</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <form>
+          <div class="form-group">
+            <label for="#post-title">Title</label>
+            <input type="text" class="form-control" id="post-title" placeholder="Title">
+          </div>        
+          <div class="form-group">
+            <label for="#post-body">Body</label>
+            <textarea class="form-control" id="post-body" rows="3"></textarea>
+          </div>
+        </form>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+        <button id="add-post" type="button" class="btn btn-primary" data-id="{{posts.id}}">Post!</button>
+      </div>
     </div>
-  {{/each}}
-  <button class="add-post btn btn-dark"><a href="/api/dashboard/add" class="add-post">Add New Post</a></button>
+  </div>
 </div>
+{{!-- Cards for posts --}}
+
+<div class="row">
+{{#each posts.posts}}
+<div class="card post-card">
+  <div class="card-header post-title post-name">
+    {{title}}
+  </div>
+  <div class="card-body">
+    <h6 class="card-text">{{contents}}</h6>
+    <p class="card-subtitle mb-2 text-muted">Posted On: {{format_date createdAt}}</p>
+  </div>
+</div>
+{{/each}}
+</div>
+<script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.min.js" integrity="sha384-VHvPCCyXqtD5DqJeNxl2dtTyhF78xXNXdkwX1CZeRusQfRKp+tA7hAShOK/B/fQ2" crossorigin="anonymous"></script>
+<script src="/js/dashboard.js"></script>
