--- a/views/post.handlebars
+++ b/views/post.handlebars
@@ -1,34 +1,59 @@
-<div class="single-post-main">
-  <div>
-  <button class="btn-dark btn " id="delete-button">Delete Post</button>
-  <button class="btn-dark btn hide" id="update-button">Update Post</button>
+<div class="modal fade" id="myModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="modal-title">Add a Comment</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <form>       
+          <div class="form-group">
+            <label for="#post-body">Comment</label>
+            <textarea class="form-control" id="post-body" rows="3"></textarea>
+          </div>
+        </form>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+        <button id="add-post" type="button" class="btn btn-primary" data-id="{{singlePost.id}}">Post!</button>
+      </div>
+    </div>
   </div>
+</div>
+<a role="button" class="btn btn-outline-secondary back-button" href="/">Go Back</a>
 
-{{#each posts as |post|}}
-<div class="post-card card" id="single-post" data-user="{{user_id}}" data-post="{{id}}">
-    <h2 id="post-title" data-post="{{id}}">{{title}}</h2>
-    <h4 data-post="{{id}}">{{content}}</h4>
-    <p data-post="{{id}}">By: {{user.username}} Date created: {{created}}</p>
+<div class="card post-card" style="width: 65rem;">
+      <div class="card-header post-name">
+    {{singlePost.title}} 
+    <h6>Posted On {{format_date singlePost.createdAt}}</h6>
+  </div>
+  <div class="card-body">
+    <h6 class="card-subtitle mb-2 text-muted">{{singlePost.topic}}</h6>
+    <p class="card-text post-text">{{singlePost.contents}}</p>
+  </div>
+</div>
+<hr class="line">
+<h5 class="text-muted comment-section">Comment Section:</h5>
+<button id="modalBtn" type="button" class="btn btn-success add-comment" data-toggle="modal" data-target="#myModal">
+ ✚ Add Comment
+</button>
+<hr>
+
+{{#each singlePost.comments as |comments|}}
+<div class="card post-card" style="width: 30rem;">
+    <div class="card-header">
+    <h5>Posted By: {{user.user_name}}</h5>
+    <p> on {{ format_date comments.createdAt}}</p>
+  </div>
+  <div class="card-body">
+    <h5 class="card-text comment-text">{{comments.contents}}</h5>
+  </div>
 </div>
 {{/each}}
-<form id="new-form" class="update-post-form d-none">
-  <div class="form-group">
-    <textarea class="form-control" id="update-post-input" rows="3" placeholder="Enter updated post content here."></textarea>
-  </div>
-  <button class="btn btn-dark" type="submit">Save Update</button>
-</form> 
-{{#each comments }}
-<div class="comment-card">
-    <h5>{{comment}}</h5><p data-post="{{id}}">Created By: {{user.username}}    Date created: {{created}}</p>
-</div>
-{{/each}}
-  <form id="new-form" class="new-comment-form">
-  <div class="form-group">
-    <textarea class="form-control" id="comment-content-input" rows="3" placeholder="Enter new comment here."></textarea>
-  </div>
-  <button class="btn btn-dark" type="submit">Add Comment</button>
-</form>  
-</div>
 
-<script src="/js/newComment.js"></script>
-<script src="/js/updatePost.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.min.js" integrity="sha384-VHvPCCyXqtD5DqJeNxl2dtTyhF78xXNXdkwX1CZeRusQfRKp+tA7hAShOK/B/fQ2" crossorigin="anonymous"></script>
+<script src="/js/singlepost.js"></script>
