--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -1,3 +1,4 @@
+<link rel="stylesheet" href="/css/dashboard.css">
 <h3>Dashboard</h3>
 <button id="modalBtn" type="button" class="btn btn-success add-post" data-toggle="modal" data-target="#myModal">
   ✚ Add Post
