--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,3 +1,4 @@
+<link rel="stylesheet" href="/css/home.css">
 <div class="home-main">
   {{#each posts as |post|}}
     <div class="post-card card" data-post="{{id}}">
